Some support for jar:file:/ URIs